# CGEngine

./: .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/Assets/Models/: cube.gltf
Engine/Assets/Models/Cube/: cube.gltf
Engine/Assets/Models/Test/: test.gltf  test2.gltf
Engine/Assets/Models/Triangle/: triangle.gltf
Engine/Assets/Shaders/: HDR.frag  HDR.vert  blur.frag  blur.vert  depth.frag  depth.vert  emissive.frag  emissive.vert  instance.frag  instance.vert  lit.frag  lit.vert  screen.frag  skybox.frag  skybox.vert  unlit.frag  unlit.shader  unlit.vert
Engine/Platform/Windows/: CMakeLists.txt  Window.cpp  Window.h
Engine/Source/: CGEngine.h  CMakeLists.txt  cgpch.h
Engine/Source/Core/: Base.h  CMakeLists.txt  EntryPoint.h
Engine/Source/Renderer/: CMakeLists.txt
Engine/src/: CGEngine.h  CMakeLists.txt  cgpch.h
Engine/src/Component/: CMakeLists.txt  Mesh.h
Engine/src/Core/: Application.cpp  Application.h  Base.h  CMakeLists.txt  Event.hpp  Log.cpp  Log.h  Logger.cpp  Logger.hpp  Time.cpp  Time.h  Window.cpp  Window.h
Engine/src/ECS/: CMakeLists.txt
Engine/src/ECS/Component/: DrawObject.cpp  DrawObject.h  Instance.h  Light.h  Tag.h  Transform.h
Engine/src/ECS/Entity/: Entity.cpp  Entity.hpp
Engine/src/ECS/System/: EntityList.cpp  EntityList.hpp
Engine/src/Events/: CMakeLists.txt  Event.hpp
Engine/src/GUI/: CMakeLists.txt  GUIContext.cpp  GUIContext.h
Engine/src/IO/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
Engine/src/IO/assimp/: AssimpLoader.cpp  AssimpLoader.h
Engine/src/IO/glTF/: glTFLoader.cpp  glTFLoader.h
Engine/src/Math/: CMakeLists.txt  Math.cpp  Math.h  Matrix3x3.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
Engine/src/Platform/: CMakeLists.txt
Engine/src/Platform/OpenGL/: CMakeLists.txt  OpenGL.h  OpenGLAPI.cpp  OpenGLAPI.h  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLDrawObject.cpp  OpenGLDrawObject.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLTypes.hpp
Engine/src/Platform/Windows/: CMakeLists.txt  (+2 more)
Engine/src/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  Context.cpp  Context.h  Framebuffer.h  RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  Shader.h  Texture.h  Types.h  Vertex.h
Engine/src/Scene/: CMakeLists.txt  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Engine/src/Utils/: CMakeLists.txt  GUID.cpp  GUID.h
(+8 files in other folders)
